--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </section>
     <section id="sobremi">
         <div class="contenedor-foto">
-            <img src="../portafolio/assets/foto.jpeg" alt="">
+            <img src="/portafolio/assets/foto.jpeg" alt="">
         </div>
         <div class="sobremi">
             <p class="titulo-seccion">Sobre Mi</p>
@@ -184,7 +184,7 @@
         <div class="fila">
             <div class="proyecto">
                 <div class="overlay"></div>
-                <img src="../portafolio/assets/img proyectos/9.webp" alt="">
+                <img src="portafolio/assets/img proyectos/9.webp" alt="">
                 <div class="info">
                     <h4>Descripción del proyecto</h4>
                     <p>Diseño Web</p>
@@ -193,7 +193,7 @@
 
             <div class="proyecto">
                 <div class="overlay"></div>
-                <img src="../portafolio/assets/img proyectos/9.webp" alt="">
+                <img src="portafolio/assets/img proyectos/9.webp" alt="">
                 <div class="info">
                     <h4>Descripción del proyecto</h4>
                     <p>Diseño Web</p>
@@ -202,36 +202,7 @@
 
             <div class="proyecto">
                 <div class="overlay"></div>
-                <img src="../portafolio/assets/img proyectos/9.webp" alt="">
-                <div class="info">
-                    <h4>Descripción del proyecto</h4>
-                    <p>Diseño Web</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="fila">
-            <div class="proyecto">
-                <div class="overlay"></div>
-                <img src="../portafolio/assets/img proyectos/9.webp" alt="">
-                <div class="info">
-                    <h4>Descripción del proyecto</h4>
-                    <p>Diseño Web</p>
-                </div>
-            </div>
-
-            <div class="proyecto">
-                <div class="overlay"></div>
-                <img src="../portafolio/assets/img proyectos/9.webp" alt="">
-                <div class="info">
-                    <h4>Descripción del proyecto</h4>
-                    <p>Diseño Web</p>
-                </div>
-            </div>
-
-            <div class="proyecto">
-                <div class="overlay"></div>
-                <img src="../portafolio/assets/img proyectos/9.webp" alt="">
+                <img src="portafolio/assets/img proyectos/9.webp" alt="">
                 <div class="info">
                     <h4>Descripción del proyecto</h4>
                     <p>Diseño Web</p>
@@ -242,7 +213,7 @@
         <div class="fila">
             <div class="proyecto">
                 <div class="overlay"></div>
-                <img src="../portafolio/assets/img proyectos/9.webp" alt="">
+                <img src="portafolio/assets/img proyectos/9.webp" alt="">
                 <div class="info">
                     <h4>Descripción del proyecto</h4>
                     <p>Diseño Web</p>
@@ -251,7 +222,7 @@
 
             <div class="proyecto">
                 <div class="overlay"></div>
-                <img src="../portafolio/assets/img proyectos/9.webp" alt="">
+                <img src="portafolio/assets/img proyectos/9.webp" alt="">
                 <div class="info">
                     <h4>Descripción del proyecto</h4>
                     <p>Diseño Web</p>
@@ -260,7 +231,36 @@
 
             <div class="proyecto">
                 <div class="overlay"></div>
-                <img src="../portafolio/assets/img proyectos/9.webp" alt="">
+                <img src="portafolio/assets/img proyectos/9.webp" alt="">
+                <div class="info">
+                    <h4>Descripción del proyecto</h4>
+                    <p>Diseño Web</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="fila">
+            <div class="proyecto">
+                <div class="overlay"></div>
+                <img src="portafolio/assets/img proyectos/9.webp" alt="">
+                <div class="info">
+                    <h4>Descripción del proyecto</h4>
+                    <p>Diseño Web</p>
+                </div>
+            </div>
+
+            <div class="proyecto">
+                <div class="overlay"></div>
+                <img src="portafolio/assets/img proyectos/9.webp" alt="">
+                <div class="info">
+                    <h4>Descripción del proyecto</h4>
+                    <p>Diseño Web</p>
+                </div>
+            </div>
+
+            <div class="proyecto">
+                <div class="overlay"></div>
+                <img src="portafolio/assets/img proyectos/9.webp" alt="">
                 <div class="info">
                     <h4>Descripción del proyecto</h4>
                     <p>Diseño Web</p>
